added animations for practice to all files

--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,9 @@
+button {
+    background-color: ghostwhite;
+    transition-duration: 2s;
+    transition-property: background-color;
+}
 
+button:hover {
+    background-color: cornflowerblue;
+}
