--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -3,12 +3,15 @@
   animation-name: top;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  
+  
 }
 
 .hamburger:hover > div:nth-child(2){
   animation-name: middle;
   animation-duration: .1s;
   animation-fill-mode: forwards;
+  
 }
 
 .hamburger:hover > div:nth-child(3){
@@ -16,6 +19,7 @@
   animation-name: bottom;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  
 }
 
 nav {
@@ -29,15 +33,23 @@ nav {
 
 @keyframes top {
   from {}
-  to {}
+  to {
+    rotate: 405deg;
+    transform: translateX(24px) translateY(24px);
+  }
 }
 
 @keyframes middle {
   from {}
-  to {}
+  to {background-color: mediumvioletred;}
 }
 
 @keyframes bottom {
   from {}
-  to {}
+  to {
+    rotate: -405deg;
+    transform: translateX(22px) translateY(-25px);
+  
+  }
+
 }
